--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 
                 <div class="category-grid">
                     <div class="category-card">
-                        <img src="https://i.ibb.co/5xJJhsSh/il-300x300-5209606068-sooh.webp" alt="Art Prints">
-                        <h3>Art Prints</h3>
-                        <p>Premium quality prints of our most popular digital artworks</p>
+                        <img src="https://i.ibb.co/7t2bZ9NP/god-s-favorite.png" alt="Digital Design Tees">
+                        <h3>Digital Design Tees</h3>
+                        <p>Wearable art: Our best digital designs</p>
                     </div>
                     
                     <div class="category-card">
