--- a/index.html
+++ b/index.html
@@ -276,14 +276,19 @@
                 </div>
 
                 <div class="discovery-section">
-                    <p class="discovery-text">There's so much more for you to discover</p>
-                    <div class="pagination">
-                        <button class="page-arrow"><i class="fas fa-chevron-left"></i></button>
-                        <button class="page-number active">1</button>
-                        <button class="page-number">2</button>
-                        <button class="page-number">3</button>
-                        <button class="page-arrow"><i class="fas fa-chevron-right"></i></button>
-                    </div>
+					<p class="discovery-text">There's so much more for you to discover</p>
+					<div class="pagination">
+						<span class="page-arrow disabled"><i class="fas fa-chevron-left"></i></span>
+
+						<a href="index.html" class="page-number active">1</a>
+						<a href="index2.html" class="page-number">2</a>
+						<a href="index3.html" class="page-number">3</a>
+
+						<a href="index2.html" class="page-arrow"><i class="fas fa-chevron-right"></i></a>
+					</div>
+
+
+              
                 </div>
             </div>
         </section>
