--- a/index2.html
+++ b/index2.html
@@ -250,18 +250,20 @@
         </section>
         
         <section class="additional-products">
-            <div class="container">
-                <div class="discovery-section">
-                    <p class="discovery-text">There's so much more for you to discover</p>
-                    <div class="pagination">
-                        <a href="index.html" class="page-arrow"><i class="fas fa-chevron-left"></i></a>
-                        <a href="index.html" class="page-number">1</a>
-                        <a href="#" class="page-number active">2</a>
-                        <a href="#" class="page-number">3</a>
-                        <a href="#" class="page-arrow"><i class="fas fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
+					<div class="discovery-section">
+						<p class="discovery-text">There's so much more for you to discover</p>	
+						<div class="pagination">
+							<a href="index.html" class="page-arrow"><i class="fas fa-chevron-left"></i></a>
+		
+							<a href="index.html" class="page-number">1</a>
+							<a href="index2.html" class="page-number active">2</a>
+							<a href="index3.html" class="page-number">3</a>
+    
+							<a href="index3.html" class="page-arrow"><i class="fas fa-chevron-right"></i></a>
+						</div>
+
+					</div>
+
         </section>
     </main>
 
