--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
     <span class="centered-text">25+ unique artworks available</span>
   </div>
   <div class="filter-item">
-    <select>
-      <option>Sort by: Featured</option>
-      <option>Newest First</option>
-      <option>Price: Low to High</option>
-      <option>Price: High to Low</option>
-    </select>
+        <select id="sort-options" class="sort-select">
+            <option value="featured">Sort by: Featured</option>
+            <option value="newest">Newest First</option>
+            <option value="price-low">Price: Low to High</option>
+            <option value="price-high">Price: High to Low</option>
+            <option value="name-asc">Name: A-Z</option>
+            <option value="name-desc">Name: Z-A</option>
+        </select>
   </div>
 </div>
         <section class="featured-products">
@@ -337,7 +339,10 @@
         </div>
     </div>
 </footer>
+	<script src="js/sort.js"></script>
     <script src="js/main.js"></script>
+	<script src="js/products.js"></script>
+	<script src="js/product.js"></script>
 	<script>
     document.querySelectorAll('.product-card').forEach(card => {
         card.style.cursor = 'pointer';
