--- a/index3.html
+++ b/index3.html
@@ -41,22 +41,24 @@
                 <h2>Digital Art Portfolio</h2>
                 <p class="subtitle">Discover exquisite digital creations and custom commissions from our studio</p>
                 
-                <div class="filters">
-                    <div class="filter-item">
-                        <span>25+ unique artworks available</span>
-                    </div>
-                    <div class="filter-item">
-                        <select>
-                            <option>Sort by: Featured</option>
-                            <option>Newest First</option>
-                            <option>Price: Low to High</option>
-                            <option>Price: High to Low</option>
-                        </select>
-                    </div>
-                </div>
-            </section>
-        </div>
-        
+               <div class="filters">
+  <div class="filter-item">
+    <button class="btn-draw" onclick="location.href='indexdrawing.html'">Create Your Own Art</button>
+  </div>
+  <div class="filter-item">
+    <span class="centered-text">25+ unique artworks available</span>
+  </div>
+  <div class="filter-item">
+        <select id="sort-options" class="sort-select">
+            <option value="featured">Sort by: Featured</option>
+            <option value="newest">Newest First</option>
+            <option value="price-low">Price: Low to High</option>
+            <option value="price-high">Price: High to Low</option>
+            <option value="name-asc">Name: A-Z</option>
+            <option value="name-desc">Name: Z-A</option>
+        </select>
+  </div>
+</div>
         <section class="featured-products">
             <div class="container">
                 <h3>Featured Artworks</h3>
@@ -311,7 +313,10 @@
         </div>
     </div>
 </footer>
+	<script src="js/sort.js"></script>
     <script src="js/main.js"></script>
+	<script src="js/products.js"></script>
+	<script src="js/product.js"></script>
 	<script>
     document.querySelectorAll('.product-card').forEach(card => {
         card.style.cursor = 'pointer';
