--- a/index2.html
+++ b/index2.html
@@ -277,7 +277,9 @@
             <!-- Left Column - Logo and Social -->
             <div class="footer-left">
                 <div class="footer-logo">
+                    <a href="index.html">
                     <img src="https://i.ibb.co/60pWczgJ/495264830-710751594813265-5980362639866073055-n.png" alt="Render Graphics Logo">
+                    </a>
                 </div>
                
             </div>
