--- a/index.html
+++ b/index.html
@@ -377,5 +377,15 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+<script>
+window.addEventListener("keyup", function(e) {
+  if (e.key === "PrintScreen") {
+    document.body.style.filter = "blur(10px)";
+    setTimeout(() => {
+      document.body.style.filter = "";
+    }, 1000);
+  }
+});
+</script>
 </body>
 </html>
