--- a/index.html
+++ b/index.html
@@ -363,5 +363,6 @@
   <img src="your-image.jpg" alt="Protected" />
   <div class="overlay"></div>
 </div>
+<script src="product.js"></script>
 </body>
 </html>
