--- a/category.html
+++ b/category.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="user-actions">
-                    <a href="#" class="sign-in"><i class="far fa-user"></i> Sign In</a>
+                    <a href="javascript:void(0)" class="sign-in"><i class="far fa-user"></i> Sign In</a>
                     <a href="#" class="cart"><i class="fas fa-shopping-cart"></i> Cart</a>
                 </div>
             </div>
@@ -302,6 +302,8 @@
     <script src="js/main.js"></script>
     <script src="js/products.js"></script>
     <script src="js/product.js"></script>
+    <script src="js/security.js"></script>
+	<script src="js/auth-modal.js"></script>
     <script>
         document.querySelectorAll('.product-card').forEach(card => {
             card.style.cursor = 'pointer';
@@ -315,5 +317,5 @@
         });
     </script>
 </body>
-<script src="js/security.js"></script>
+
 </html>
