--- a/product.html
+++ b/product.html
@@ -28,7 +28,7 @@
                 </div>
                 
                 <div class="user-actions">
-                    <a href="#" class="sign-in"><i class="far fa-user"></i> Sign In</a>
+                    <a href="javascript:void(0)" class="sign-in"><i class="far fa-user"></i> Sign In</a>
                     <a href="#" class="cart"><i class="fas fa-shopping-cart"></i> Cart</a>
                 </div>
             </div>
@@ -136,6 +136,7 @@
 
     <!-- JavaScript Files -->
     <script src="js/products.js"></script>
+	<script src="js/auth-modal.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
