--- a/index3.html
+++ b/index3.html
@@ -28,7 +28,7 @@
                 </div>
                 
                 <div class="user-actions">
-                    <a href="#" class="sign-in"><i class="far fa-user"></i> Sign In</a>
+                    <a href="javascript:void(0)" class="sign-in"><i class="far fa-user"></i> Sign In</a>
                     <a href="#" class="cart"><i class="fas fa-shopping-cart"></i> Cart</a>
                 </div>
             </div>
@@ -319,6 +319,19 @@
     <script src="js/main.js"></script>
 	<script src="js/products.js"></script>
 	<script src="js/product.js"></script>
+    <script src="js/security.js"></script>
+	<script src="js/auth-modal.js"></script>
+	<script>
+    document.querySelectorAll('.product-card').forEach(card => {
+        card.style.cursor = 'pointer';
+        card.addEventListener('click', (e) => {
+            // Don't redirect if clicking buttons/links inside the card
+            if (e.target.tagName === 'BUTTON' || e.target.closest('a')) return;
+            
+            const productId = card.dataset.productId;
+            window.location.href = `product.html?id=${productId}`;
+        });
+    });
+</script>
 </body>
-<script src="js/security.js"></script>
 </html>
